--- a/envs/pandas.yaml
+++ b/envs/pandas.yaml
@@ -1,4 +1,4 @@
-name: pandas
+name: jupyter-clean
 channels:
   - conda-forge
   - bioconda
@@ -7,52 +7,289 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=1_gnu
-  - biopython=1.79=py310h6acc77f_1
+  - aioeasywebdav=2.4.0=pyha770c72_0
+  - aiohttp=3.8.1=py310h6acc77f_0
+  - aiosignal=1.2.0=pyhd8ed1ab_0
+  - alsa-lib=1.2.3=h516909a_0
+  - amply=0.1.4=py_0
+  - anyio=3.5.0=py310hff52083_0
+  - appdirs=1.4.4=pyh9f0ad1d_0
+  - argon2-cffi=21.3.0=pyhd8ed1ab_0
+  - argon2-cffi-bindings=21.2.0=py310h6acc77f_1
+  - asttokens=2.0.5=pyhd8ed1ab_0
+  - async-timeout=4.0.2=pyhd8ed1ab_0
+  - attmap=0.13.2=pyhd8ed1ab_0
+  - attrs=21.4.0=pyhd8ed1ab_0
+  - babel=2.9.1=pyh44b312d_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - bcrypt=3.2.0=py310h6acc77f_2
+  - beautifulsoup4=4.10.0=pyha770c72_0
   - biothings_client=0.2.6=pyh5e36f6f_0
+  - bleach=4.1.0=pyhd8ed1ab_0
+  - boto3=1.21.28=pyhd8ed1ab_0
+  - botocore=1.24.28=pyhd8ed1ab_0
+  - brotli=1.0.9=h7f98852_6
+  - brotli-bin=1.0.9=h7f98852_6
   - brotlipy=0.7.0=py310h6acc77f_1003
   - bzip2=1.0.8=h7f98852_4
+  - c-ares=1.18.1=h7f98852_0
   - ca-certificates=2021.10.8=ha878542_0
+  - cachetools=5.0.0=pyhd8ed1ab_0
   - certifi=2021.10.8=py310hff52083_1
   - cffi=1.15.0=py310h0fdd8cc_0
-  - charset-normalizer=2.0.9=pyhd8ed1ab_0
-  - cryptography=36.0.1=py310h685ca39_0
-  - idna=3.1=pyhd3deb0d_0
+  - charset-normalizer=2.0.12=pyhd8ed1ab_0
+  - coin-or-cbc=2.10.7=h3786ebc_0
+  - coin-or-cgl=0.60.3=he7e83c3_2
+  - coin-or-clp=1.17.6=h256e9bb_3
+  - coin-or-osi=0.108.6=h3b589db_2
+  - coin-or-utils=2.11.6=h573740c_0
+  - coincbc=2.10.7=0_metapackage
+  - configargparse=1.5.3=pyhd8ed1ab_0
+  - connection_pool=0.0.3=pyhd3deb0d_0
+  - cryptography=36.0.2=py310h597c629_0
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - datrie=0.8.2=py310h6acc77f_3
+  - dbus=1.13.6=h5008d03_3
+  - debugpy=1.5.1=py310h122e73d_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - docutils=0.18.1=py310hff52083_0
+  - dropbox=11.28.0=pyhd8ed1ab_0
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - executing=0.8.3=pyhd8ed1ab_0
+  - expat=2.4.7=h27087fc_0
+  - filechunkio=1.8=py_2
+  - filelock=3.6.0=pyhd8ed1ab_0
+  - flit-core=3.7.1=pyhd8ed1ab_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
+  - fontconfig=2.13.96=h8e229c2_2
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.31.2=py310h5764c6d_0
+  - freetype=2.10.4=h0708190_1
+  - frozenlist=1.3.0=py310h6acc77f_0
+  - ftputil=5.0.3=pyhd8ed1ab_0
+  - gettext=0.19.8.1=h73d1719_1008
+  - giflib=5.2.1=h36c2ea0_2
+  - gitdb=4.0.9=pyhd8ed1ab_0
+  - gitpython=3.1.27=pyhd8ed1ab_0
+  - google-api-core=2.5.0=pyhd8ed1ab_0
+  - google-api-python-client=2.42.0=pyhd8ed1ab_0
+  - google-auth=2.6.2=pyh6c4a22f_0
+  - google-auth-httplib2=0.1.0=pyhd8ed1ab_0
+  - google-cloud-core=2.2.2=pyh6c4a22f_0
+  - google-cloud-storage=2.1.0=pyh6c4a22f_0
+  - google-crc32c=1.1.2=py310h82b6597_2
+  - google-resumable-media=2.1.0=pyh6c4a22f_0
+  - googleapis-common-protos=1.56.0=py310hff52083_0
+  - grpcio=1.45.0=py310h44b9e0c_0
+  - gst-plugins-base=1.20.1=hcf0ee16_1
+  - gstreamer=1.20.1=hd4edc92_1
+  - httplib2=0.20.4=pyhd8ed1ab_0
+  - icu=69.1=h9c3ff4c_0
+  - idna=3.3=pyhd8ed1ab_0
+  - importlib-metadata=4.11.3=py310hff52083_0
+  - importlib_resources=5.6.0=pyhd8ed1ab_0
+  - iniconfig=1.1.1=pyh9f0ad1d_0
+  - ipykernel=6.10.0=py310hfdc917e_0
+  - ipython=8.2.0=py310hff52083_0
+  - ipython_genutils=0.2.0=py_1
+  - jbig=2.1=h7f98852_2003
+  - jedi=0.18.1=py310hff52083_0
+  - jinja2=3.1.1=pyhd8ed1ab_0
+  - jmespath=1.0.0=pyhd8ed1ab_0
+  - jpeg=9e=h7f98852_0
+  - json5=0.9.5=pyh9f0ad1d_0
+  - jsonschema=4.4.0=pyhd8ed1ab_0
+  - jupyter_client=7.1.2=pyhd8ed1ab_0
+  - jupyter_core=4.9.2=py310hff52083_0
+  - jupyter_server=1.15.6=pyhd8ed1ab_1
+  - jupyterlab=3.3.2=pyhd8ed1ab_0
+  - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+  - jupyterlab_server=2.12.0=pyhd8ed1ab_0
+  - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.0=py310hbf28c38_0
+  - krb5=1.19.3=h3790be6_0
+  - lcms2=2.12=hddcbb42_0
   - ld_impl_linux-64=2.36.1=hea4e1c9_2
-  - libblas=3.9.0=12_linux64_openblas
-  - libcblas=3.9.0=12_linux64_openblas
+  - lerc=3.0=h9c3ff4c_0
+  - libblas=3.9.0=13_linux64_openblas
+  - libbrotlicommon=1.0.9=h7f98852_6
+  - libbrotlidec=1.0.9=h7f98852_6
+  - libbrotlienc=1.0.9=h7f98852_6
+  - libcblas=3.9.0=13_linux64_openblas
+  - libclang=13.0.1=default_hc23dcda_0
+  - libcrc32c=1.1.2=h9c3ff4c_0
+  - libdeflate=1.10=h7f98852_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libevent=2.1.10=h9b69904_4
   - libffi=3.4.2=h7f98852_5
-  - libgcc-ng=11.2.0=h1d223b6_11
-  - libgfortran-ng=11.2.0=h69a702a_11
-  - libgfortran5=11.2.0=h5c6108e_11
-  - libgomp=11.2.0=h1d223b6_11
-  - liblapack=3.9.0=12_linux64_openblas
+  - libgcc-ng=11.2.0=h1d223b6_14
+  - libgfortran-ng=11.2.0=h69a702a_14
+  - libgfortran5=11.2.0=h5c6108e_14
+  - libglib=2.70.2=h174f98d_4
+  - libgomp=11.2.0=h1d223b6_14
+  - libiconv=1.16=h516909a_0
+  - liblapack=3.9.0=13_linux64_openblas
+  - liblapacke=3.9.0=13_linux64_openblas
+  - libllvm13=13.0.1=hf817b99_2
   - libnsl=2.0.0=h7f98852_0
+  - libogg=1.3.4=h7f98852_1
   - libopenblas=0.3.18=pthreads_h8fe5266_0
-  - libstdcxx-ng=11.2.0=he4da1e4_11
+  - libopus=1.3.1=h7f98852_1
+  - libpng=1.6.37=h21135ba_2
+  - libpq=14.2=hd57d9b9_0
+  - libprotobuf=3.20.0=h6239696_0
+  - libsodium=1.0.18=h36c2ea0_1
+  - libstdcxx-ng=11.2.0=he4da1e4_14
+  - libtiff=4.3.0=h542a066_3
   - libuuid=2.32.1=h7f98852_1000
-  - libzlib=1.2.11=h36c2ea0_1013
+  - libuv=1.43.0=h7f98852_0
+  - libvorbis=1.3.7=h9c3ff4c_0
+  - libwebp=1.2.2=h3452ae3_0
+  - libwebp-base=1.2.2=h7f98852_1
+  - libxcb=1.13=h7f98852_1004
+  - libxkbcommon=1.0.3=he3ba5ed_0
+  - libxml2=2.9.12=h885dcf4_1
+  - libzlib=1.2.11=h166bdaf_1014
+  - logmuse=0.2.6=pyh8c360ce_0
+  - lz4-c=1.9.3=h9c3ff4c_1
+  - markupsafe=2.1.1=py310h5764c6d_0
+  - matplotlib=3.5.1=py310hff52083_0
+  - matplotlib-base=3.5.1=py310h23f4a51_0
+  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
+  - mistune=0.8.4=py310h6acc77f_1005
+  - multidict=6.0.2=py310h6acc77f_0
+  - munkres=1.1.4=pyh9f0ad1d_0
   - mygene=3.2.2=pyh5e36f6f_0
-  - ncurses=6.2=h58526e2_4
-  - numpy=1.21.4=py310h57288b1_0
-  - openssl=1.1.1l=h7f98852_0
-  - pandas=1.3.4=py310hb5077e9_1
-  - pip=21.3.1=pyhd8ed1ab_0
+  - mysql-common=8.0.28=ha770c72_0
+  - mysql-libs=8.0.28=hfa10184_0
+  - nbclassic=0.3.7=pyhd8ed1ab_0
+  - nbclient=0.5.13=pyhd8ed1ab_0
+  - nbconvert=6.4.5=py310hff52083_0
+  - nbformat=5.2.0=pyhd8ed1ab_0
+  - ncurses=6.3=h9c3ff4c_0
+  - nest-asyncio=1.5.4=pyhd8ed1ab_0
+  - nodejs=17.8.0=h784f1fd_0
+  - notebook=6.4.10=pyha770c72_0
+  - notebook-shim=0.1.0=pyhd8ed1ab_0
+  - nspr=4.32=h9c3ff4c_1
+  - nss=3.76=h2350873_0
+  - numpy=1.22.3=py310h45f3432_0
+  - oauth2client=4.1.3=py_0
+  - openjpeg=2.4.0=hb52868f_1
+  - openssl=1.1.1n=h166bdaf_0
+  - packaging=21.3=pyhd8ed1ab_0
+  - pandas=1.4.1=py310hb5077e9_0
+  - pandoc=2.17.1.1=ha770c72_0
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - paramiko=2.10.3=pyhd8ed1ab_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - patsy=0.5.2=pyhd8ed1ab_0
+  - pcre=8.45=h9c3ff4c_0
+  - peppy=0.31.2=pyhd8ed1ab_2
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
+  - pillow=9.0.1=py310he619898_2
+  - pip=22.0.4=pyhd8ed1ab_0
+  - plac=1.3.4=pyhd8ed1ab_0
+  - pluggy=1.0.0=py310hff52083_2
+  - ply=3.11=py_1
+  - prettytable=3.2.0=pyhd8ed1ab_0
+  - prometheus_client=0.13.1=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.27=pyha770c72_0
+  - protobuf=3.20.0=py310hd8f1fbe_0
+  - psutil=5.9.0=py310h6acc77f_0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pulp=2.6.0=py310hff52083_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - py=1.11.0=pyh6c4a22f_0
+  - pyasn1=0.4.8=py_0
+  - pyasn1-modules=0.2.7=py_0
   - pycparser=2.21=pyhd8ed1ab_0
-  - pyopenssl=21.0.0=pyhd8ed1ab_0
+  - pygments=2.11.2=pyhd8ed1ab_0
+  - pynacl=1.5.0=py310h6acc77f_0
+  - pyopenssl=22.0.0=pyhd8ed1ab_0
+  - pyparsing=3.0.7=pyhd8ed1ab_0
+  - pyqt=5.12.3=py310hff52083_8
+  - pyqt-impl=5.12.3=py310h1f8e252_8
+  - pyqt5-sip=4.19.18=py310h122e73d_8
+  - pyqtchart=5.12=py310hfcd6d55_8
+  - pyqtwebengine=5.12.1=py310hfcd6d55_8
+  - pyrsistent=0.18.1=py310h6acc77f_0
+  - pysftp=0.2.9=py_1
   - pysocks=1.7.1=py310hff52083_4
-  - python=3.10.1=h62f1059_2_cpython
+  - pytest=7.1.1=py310hff52083_0
+  - python=3.10.4=h9a8a25e_0_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-irodsclient=1.1.2=pyhd8ed1ab_0
   - python_abi=3.10=2_cp310
-  - pytz=2021.3=pyhd8ed1ab_0
+  - pytz=2022.1=pyhd8ed1ab_0
+  - pyu2f=0.1.5=pyhd8ed1ab_0
+  - pyyaml=6.0=py310h6acc77f_3
+  - pyzmq=22.3.0=py310h675a958_1
+  - qt=5.12.9=h1304e3e_6
+  - ratelimiter=1.2.0=py_1002
   - readline=8.1=h46c0cb4_0
-  - requests=2.26.0=pyhd8ed1ab_1
-  - setuptools=59.1.1=py310hff52083_0
+  - requests=2.27.1=pyhd8ed1ab_0
+  - retry=0.9.2=py_0
+  - rsa=4.8=pyhd8ed1ab_0
+  - s3transfer=0.5.2=pyhd8ed1ab_0
+  - scikit-posthocs=0.6.7=pyhd8ed1ab_0
+  - scipy=1.8.0=py310hea5193d_1
+  - seaborn=0.11.2=hd8ed1ab_0
+  - seaborn-base=0.11.2=pyhd8ed1ab_0
+  - send2trash=1.8.0=pyhd8ed1ab_0
+  - setuptools=61.2.0=py310hff52083_0
+  - setuptools-scm=6.4.2=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
-  - sqlite=3.37.0=h9cd32fc_0
-  - tk=8.6.11=h27826a3_1
-  - tzdata=2021e=he74cb21_0
-  - urllib3=1.26.7=pyhd8ed1ab_0
-  - wheel=0.37.0=pyhd8ed1ab_1
+  - slacker=0.14.0=py_0
+  - smart_open=5.2.1=pyhd8ed1ab_0
+  - smmap=3.0.5=pyh44b312d_0
+  - snakemake=7.3.2=hdfd78af_0
+  - snakemake-minimal=7.3.2=pyhdfd78af_0
+  - sniffio=1.2.0=py310hff52083_2
+  - soupsieve=2.3.1=pyhd8ed1ab_0
+  - sqlite=3.37.1=h4ff8645_0
+  - stack_data=0.2.0=pyhd8ed1ab_0
+  - statsmodels=0.13.2=py310h96516ba_0
+  - stone=3.3.1=pyhd8ed1ab_0
+  - stopit=1.1.2=py_0
+  - tabulate=0.8.9=pyhd8ed1ab_0
+  - terminado=0.13.3=py310hff52083_0
+  - testpath=0.6.0=pyhd8ed1ab_0
+  - tk=8.6.12=h27826a3_0
+  - tomli=2.0.1=pyhd8ed1ab_0
+  - toposort=1.7=pyhd8ed1ab_0
+  - tornado=6.1=py310h6acc77f_2
+  - traitlets=5.1.1=pyhd8ed1ab_0
+  - typing-extensions=4.1.1=hd8ed1ab_0
+  - typing_extensions=4.1.1=pyha770c72_0
+  - tzdata=2022a=h191b570_0
+  - ubiquerg=0.6.1=pyh9f0ad1d_0
+  - unicodedata2=14.0.0=py310h6acc77f_0
+  - uritemplate=4.1.1=pyhd8ed1ab_0
+  - urllib3=1.26.9=pyhd8ed1ab_0
+  - veracitools=0.1.3=py_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - webencodings=0.5.1=py_1
+  - websocket-client=1.3.1=pyhd8ed1ab_0
+  - wheel=0.37.1=pyhd8ed1ab_0
+  - wrapt=1.14.0=py310h5764c6d_0
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
   - xz=5.2.5=h516909a_1
-  - zlib=1.2.11=h36c2ea0_1013
-prefix: /home/pengsc/bin/miniconda3/envs/pandas
+  - yaml=0.2.5=h7f98852_2
+  - yarl=1.7.2=py310h6acc77f_1
+  - yte=1.2.0=py310hff52083_0
+  - zeromq=4.3.4=h9c3ff4c_1
+  - zipp=3.7.0=pyhd8ed1ab_1
+  - zlib=1.2.11=h166bdaf_1014
+  - zstd=1.5.2=ha95c52a_0
+prefix: /home/pengsc/bin/miniconda3/envs/jupyter-clean
